--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: phillipnunes/quickstart # Path to your Github repository
   branch: master # Branch to update
   publish_mode: editorial_workflow
-  media_folder: "static/images/uploads"
+  media_folder: "/static/images/uploads"
   public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
